crates/keron-lang/tests/corpus/errors/check/list_annotation_mismatch.keron
val xs: List<String> = [1, 2, 3]
